--- a/_Portfolio/custom.css
+++ b/_Portfolio/custom.css
@@ -1,9 +1,10 @@
 .body{
     margin: 0px;
     background-color: white;
+    font-family: helvetica;
 }
 
-/* header css */
+/* header */
 
 #header{
     background-color: rgba(35, 35, 35, 0.95);
@@ -11,7 +12,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 10%;
-    overflow: hidden;
     width: 80%;
     z-index: 1;
 }
@@ -24,7 +24,7 @@
 .nav-list{
     gap: 1rem;
     justify-content: center;
-    font-family: helvetica;
+    
     margin: 0;
     padding: 0;
     list-style: none;
@@ -38,8 +38,6 @@
     text-align: center;
     display: inline-block;
     margin: 0px;
-    /* filter: drop-shadow(0 0 0.75rem grey); */
-    /* border-radius: 5px;*/
 }
 
 .page-selected{
@@ -52,7 +50,6 @@
     font-size: 16px;
     margin: 0px;
     cursor: pointer;
-    /* filter: drop-shadow(0 0 0.75rem grey); */
     border-radius: 5px;
 }
 
@@ -72,15 +69,103 @@
     font-size: 16px;
 }
 
-.menu{
-    cursor: pointer;
-}
-
 .logo{
     cursor: pointer;
 }
 
-/* carousel css */
+/* header responsive */
+
+@media only screen and (max-width:800px) {
+    nav{display:none;} 
+}
+
+/* menu */
+
+#menu{
+    position: relative;
+    display: inline-block;
+}
+
+.menu-content{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 125px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.menu-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 5px;
+  }
+
+.menu-content a:hover {background-color: #ddd;}
+
+#menu:hover .menu-content{display: block;}
+
+/* profile with dropdown */
+
+.profile{
+    cursor: pointer;
+    padding: 5px;
+}
+
+.profile-frame{
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.profile-img{
+    /* 960x1280 native */
+    height: 160px;
+    width: 120px;
+    position: relative;
+    right: 38px;
+    bottom: 52px;
+}
+
+.socials{
+    display: none;
+    position: absolute;
+    right: 105px;
+    top: +65px;
+    background-color: #f1f1f1;
+    min-width: 125px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.socials a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 5px;
+}
+
+.profile:hover .socials{display: block;}
+
+.socials a:hover {background-color: #ddd;}
+
+/* background */
+
+#background{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: fixed;
+    z-index: 0;
+}
+
+/* carousel */
 
 .carousel{
     margin-top: 65px;
@@ -127,6 +212,8 @@
 
 .fillertext{
     font-size: 24px;
+    background-color: white;
+    z-index: -2;
 }
 
 /* graveyard */
@@ -147,11 +234,3 @@
     font-family: helvetica;
 } */
 
-/* .profile{
-    height: 45px;
-    width: 45px;
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 50%;
-    display: inline-block;
-    cursor: pointer;
-} */
