--- a/_css/main.css
+++ b/_css/main.css
@@ -12,6 +12,14 @@
     top: 0;
 }
 
+.divider{
+    height: 5px;
+    background-color:black;
+    margin: 0px auto;
+    width: 80%;
+    border-radius: 5px;
+}
+
 .show{display: block;}
 
 .hide{display: none;}
@@ -28,15 +36,12 @@
     padding: 10px 10%;
     width: 80%;
     z-index: 1;
-
     backdrop-filter: blur(6px);
-
 }
 
 .nav-list{
     gap: 1rem;
     justify-content: center;
-    
     margin: 0;
     padding: 0;
     list-style: none;
@@ -109,12 +114,13 @@
     z-index: 1;
 }
 
-#menu-content a {
+.menu-item {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     border-radius: 5px;
+    margin: 6px 6px;
 }
 
 .menu-line{
@@ -122,6 +128,16 @@
     background-color:black;
     margin: 0px 0px;
     width: 80%;
+}
+
+.menu-selected{
+    color: #ffffff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 5px;
+    margin: 6px 6px;
+    background-color: #0066ff;
 }
 
 #menu-content a:hover {background-color: #ddd;}
@@ -167,9 +183,92 @@
     text-decoration: none;
     display: block;
     border-radius: 5px;
+    margin: 6px 6px;
 }
 
 #socials a:hover {background-color: #ddd;}
+
+/* #endregion */
+
+/* #region || Modal */
+
+#modal{
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+}
+
+#modal-filter{
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(4px);
+    z-index: 1;
+}
+
+#modal-content{
+    left: 50vw;
+    top: 50vh;
+    transform: translateX(-50%) translateY(-50%);
+    width: 80%;
+    border-radius: 20px;
+    position: fixed;
+    z-index: 2;
+    background-color: #ffffff;
+    justify-content: center;
+    
+}
+
+#modal-header h1{
+    text-align: center;
+    margin: 6% 0 4% 0;
+}
+
+#modal-socials h1{
+    text-align: center;
+    font-size: 1.7rem;
+    margin: 2% 0 0 0;
+}
+
+#modal-links{
+    display:flex;
+    justify-content: space-between;
+    margin: 1% 10%;
+    font-size: 1.5rem;
+    padding: 12px 16px;
+}
+
+.modal-link{
+    text-decoration: none;
+    color:black;
+}
+
+.modal-link-img{
+    width: 1.1rem;
+    height: 1.1rem;
+}
+
+#modal-content p{
+    margin: 4% 10%;
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+#modal-button{
+    margin: 2% 0 2.5% 0;
+    position: relative;
+    left: 50%;
+    transform:translateX(-50%);
+    text-align: center;
+    background-color: #0066ff;
+    color: #ffffff;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight:bold;
+}
 
 /* #endregion */
 
@@ -245,25 +344,50 @@
 
 #main{background-color: white;}
 
+/* #region || Spotlight */
+
+#spotlight{
+    padding: 5% 0;
+    background-color: #ffffff;
+}
+
+#spotlight h1{
+    text-align: center;
+}
+
+/* #endregion */
+
 /* #region || Cards */
 
 #cards{
     display: flex;
     justify-content: space-evenly;
-    flex: 1;
-    padding: 5% 0;
+    flex-wrap: wrap;
+    padding: 2% 0;
 }
 
 .card{
     background-color: #cccccc;
     border-radius: 10px;
     overflow: hidden;
+    flex: 10%;
+    margin: 1%;
 }
 
-.card button{
+.card-button{
+    position: relative;
     left: 50%;
-    top: 50%;
-    background-color: #808080;
+    transform:translateX(-50%);
+    text-align: center;
+    background-color: #0066ff;
+    color: #ffffff;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 0 0 2.5% 0;
 }
 
 .cards-text{
@@ -271,17 +395,20 @@
 }
 
 .thumbnail{
-    width: 500px;
-    height: 400px;
+    width: 100%;
     overflow: hidden;
+}
+
+.thumbnail img{
+    width: 100%;
 }
 
 /* projects */
 
 #projects-card-spaceinvaders{
     width: 500px;
-    height: 400px;
     background-image: url("../_images/spaceinvaders.png");
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 0;
@@ -308,6 +435,12 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+/* #endregion */
+
+/* #region || Highlights */
+
+
 
 /* #endregion */
 
@@ -425,3 +558,5 @@
 } */
 
 /* #endregion */
+
+/* #region ||  */
